--- a/marineconsultant.html
+++ b/marineconsultant.html
@@ -137,8 +137,8 @@
                     <h3>Repair Advice</h3>
                     <p>In my experience, about half of fiberglass repair technicians do high quality work and the other half don't. There's always been much more 
                         of a demand for fiberglass repair techs than there is supply. Fiberglass repair requires many skillsets, is manual labor, and involves using toxic substanes on a daily basis. Boat shops only pay fiberglass techs $15 - $25/h and 
-                        charge $100/h for their work, so any fiberglass tech capable of making a webpage can quadruple their income by quitting thier job. You'll find the highest quality fiberglass repair techs working out of their home shops with a self-made website. 
-                        Scedule and inspection to analyze your repair and point you in the direction of competent repair technicians.
+                        charge $100/h for their work, so any fiberglass tech capable of making a google business listing can quadruple their income by quitting their job. You'll find the highest quality fiberglass repair techs working out of their home shops. 
+                        Schedule an inspection to analyze your repair and point you in the direction of competent repair technicians.
                     </p>
                     <button type="button" class="button2">
                         <a href="tel:4433653215">Call me!</a>
@@ -156,9 +156,9 @@
                 <article class="articleright">
                     <h5>About</h5>
                     <h3>Maintenance</h3>
-                    <p>There is a virtually endless supply of boat maintenance products on the market today and I've test many of them. I've tested most types of waxes and ceramic coatings on my personal vehicles. 
+                    <p>There is a virtually endless supply of boat maintenance products on the market today and I've tested many of them. I've tested most types of waxes and ceramic coatings on my personal vehicles. 
                         I've used most brands of boat soaps, hull cleaners, and specialty cleaners in boat detailing. I've discussed vessel maintenance with thousands of customers over the years. I know what maintenance products 
-                        and stratagies are worth paying for and which ones are just hype. In my experience, there is alot more hype and marketing behind products than results. The best ways to cost-effecitvely maintain a boat 
+                        and strategies are worth paying for and which ones are just hype. In my experience, there is alot more hype and marketing behind products than results. The best ways to cost-effecitvely maintain a boat 
                         haven't changed much over the past 50 years. Schedule an inspection with me to learn the most cost-effective and proven strategies for maintaining your vessel without turning it into a money pit.
                     </p>
                     <button type="button" class="button2">
@@ -172,9 +172,9 @@
                     <h5>About</h5>
                     <h3>Consulting</h3>
                     <p>I've provided service in boat yards all over the Delmarva Peninsula from Virginia to Pennsylvania and in Maryland as far as Washington DC, Annapolis, and Baltimore. I've witnessed several boat yards and marinas lose 
-                        business because they don't provide services customers demand. Several marinas have inquired with me about setting up a service business at their location. They wanted someone to service their customers and pay them rent 
-                        and that's it: no support, no referrals, just their hand out asking for rent. If you want keep your slips full, you have to provide the services the customers require. You have to help a service business get started, 
-                        communicate, and agree upon the details of the services. Schedule a consultation with me to help an entrepreneur start a sservice business at your location.
+                        business because they don't provide services that customers demand. Several marinas have inquired with me about setting up a service business at their location. They wanted someone to service their customers and pay them rent 
+                        and that's it: no support, no referrals, just their hand out asking for rent. If you want keep your slips full, you have to provide the services that customers require. You have to help a service business get started, 
+                        communicate, and agree upon the details of the services. Schedule a consultation with me to help an entrepreneur start a service business at your location.
                     </p>
                     <button type="button" class="button2">
                         <a href="tel:4433653215">Call me!</a>
@@ -186,14 +186,15 @@
             </section>
 
             <section class="imgbox">
-                <h4>Marina Consultants I Recommend</h4>
+                <h4>Marina Groups I Advise</h4>
                 <figure>
                   <div class="container logobox">
-                    <div class="container imgblock"><a href="https://spectrumcolor.com/" target="_blank"><img src="resources\images\gelcoat\gelcoatsupplies\Boat Gelcoat Repair in Maryland.png" alt="Fiberglass Supplier Maryland"></a></div>
-                    <div class="container imgblock"><a href="https://www.jamestowndistributors.com/" target="_blank"><img src="resources\images\gelcoat\gelcoatsupplies\Boat Shop with Gelcoat Repair in Maryland.png" alt="Fiberglass Supplies Maryland"></a></div>
-                    <div class="container imgblock"><a href="https://www.rayplex.com/index.html" target="_blank"><img src="resources\images\gelcoat\gelcoatsupplies\Gelcoat Repair Service in Maryland.png" alt="Marine Fiberglass Supplier Maryland"></a></div>
-                    <div class="container imgblock"><a href="https://www.evercoat.com/" target="_blank"><img src="resources\images\gelcoat\gelcoatsupplies\Maryland Gelcoat Repair.webp" alt="Boat Fiberglass Supplier Maryland"></a></div>
-                    <div class="container imgblock"><a href="https://www.fibreglast.com/" target="_blank"><img src="resources\images\gelcoat\gelcoatsupplies\Maryland Gelcoat Shop.png" alt="Fiberglass Supplies Maryland"></a></div>
+                    <div class="container imgblock"><a href="https://trident-marine.com/" target="_blank"><img src="resources/images/consulting/consultinglogos/marina consultant.webp" alt="Marina Conslutant in Maryland"></a></div>
+                    <div class="container imgblock"><a href="https://www.eastcoastmarineconsulting.com/" target="_blank"><img src="resources/images/consulting/consultinglogos/marine conslutant.png" alt="Marine Consultant Maryland"></a></div>
+                    <div class="container imgblock"><a href="https://f3marina.com/" target="_blank"><img src="resources/images/consulting/consultinglogos/marina consultant maryland.png" alt="Marina Managment Maryland"></a></div>
+                    <div class="container imgblock"><a href="https://marylandmarina.net/" target="_blank"><img src="resources/images/consulting/consultinglogos/maryland marina management.png" alt="Marina Manager in Maryland"></a></div>
+                    <div class="container imgblock"><a href="https://www.oasismarinas.com/" target="_blank"><img src="resources/images/consulting/consultinglogos/maryland Marina Manager.png" alt="Maryland Marina Manager"></a></div>
+                    <div class="container imgblock"><a href="https://meiselholdings.com/marinas/" target="_blank"><img src="resources/images/consulting/consultinglogos/Marina Consultant in Marland.webp" alt="Marina Consltant in Maryland"></a></div>
                 </figure>
               </section>
         
