--- a/gelcoatrepair.html
+++ b/gelcoatrepair.html
@@ -20,6 +20,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
   <link href="resources/linked/style.css" rel="stylesheet">
+
   <title>Nicks Gelcoat Repair</title>
 </head>
 
@@ -27,31 +28,31 @@
 
   <nav class="navbar">
     <div class="container nav-container">
-      <a href="index.html"><img src="resources\images\Nicks Boat Work Logo noback.png" alt="maryland boat repair logo" id="logo"></a>
-      <div id="nav-link-container">
-        <ul>
-          <li><a href="boatrepair.html" class="nav-link">Boat Repair</a></li>
-          <li><a href="boatpainting.html" class="nav-link">Painting</a></li>
-          <li><a href="fiberglassrepair.html" class="nav-link">Fiberglass</a></li>
-          <li><a href="gelcoatrepair.html" class="nav-link">Gelcoat</a></li>
-          <li><a href="varnishing.html" class="nav-link">Varnishing</a></li>
-          <li><a href="marineconsultant.html" class="nav-link">Consulting</a></li>
-        </ul>
-      </div>
+        <a href="index.html"><img src="resources/images/Nicks Boat Work Logo noback.png" alt="maryland boat repair logo" id="logo"></a>
+        <div id="nav-link-container">
+            <ul>
+                <li><a href="boatrepair.html" class="nav-link">Boat Repair</a></li>
+                <li><a href="boatpainting.html" class="nav-link">Painting</a></li>
+                <li><a href="fiberglassrepair.html" class="nav-link">Fiberglass</a></li>
+                <li><a href="gelcoatrepair.html" class="nav-link">Gelcoat</a></li>
+                <li><a href="varnishing.html" class="nav-link">Varnishing</a></li>
+                <li><a href="marineconsultant.html" class="nav-link">Consulting</a></li>
+            </ul>
+        </div>
     </div>
   </nav>
   <nav id="nav2">
-    <div class="dropdown" onclick="toggleDropdown()">
-      <button class="dropbtn">Menu</button>
-      <div class="dropdown-content dropdown-content2">
-        <a href="boatrepair.html">Repairs</a>
-        <a href="boatpainting.html">Boat Painting</a>
-        <a href="fiberglassrepair.html">Fiberglass</a>
-        <a href="gelcoatrepair.html">Gelcoat</a>
-        <a href="varnishing.html">Varnishing</a>
-        <a href="marineconsultant.html">Consulting</a>
+      <div class="dropdown" onclick="toggleDropdown()">
+          <button class="dropbtn">Menu</button>
+          <div class="dropdown-content">
+              <a href="boatrepair.html">Repairs</a>
+              <a href="boatpainting.html">Boat Painting</a>
+              <a href="fiberglassrepair.html">Fiberglass</a>
+              <a href="gelcoatrepair.html">Gelcoat</a>
+              <a href="varnishing.html">Varnishing</a>
+              <a href="marineconsultant.html">Consulting</a>
+          </div>
       </div>
-    </div>
   </nav>
     
   <div class="bannerimggelcoat "></div>
@@ -72,6 +73,7 @@
     <button type="button" id="call">
         <a href="tel:4433653215">Call me!</a>
     </button>
+  
   </header>
         
   <main>
@@ -472,7 +474,7 @@
       <div class="paragraph">
         <p>
         <ul>
-            <li><b>What is gelcoat?  </b>Gelcoat is a type of surface coating used in the fabrication of fiberglass-reinforced composites. It is a specialized resin-based material that is applied to the mold or surface of a composite structure to create a smooth and glossy finish. Gelcoat serves both aesthetic and protective purposes.</li>
+            <li><b  class="heading">What is gelcoat?  </b>Gelcoat is a type of surface coating used in the fabrication of fiberglass-reinforced composites. It is a specialized resin-based material that is applied to the mold or surface of a composite structure to create a smooth and glossy finish. Gelcoat serves both aesthetic and protective purposes.</li>
             <li><b>Benefits of gelcoat</b> 
                 <ul>
                     <li class="sublist"><b>Aesthetic Finish:  </b>Gelcoat provides a smooth and polished surface, enhancing the appearance of the final product. It is available in various colors and can be pigmented to achieve different finishes.</li>
@@ -510,7 +512,6 @@
                 it takes years of practice to develop the skills necessary to perform high quality gelcoat repairs. Gelcoat application is a science and an art. It takes a fundamental understanding of chemistry, experience with additives and different environmental situations, and the 
                 artistic skills of a sculptor to perform high quality gelcoat repairs. Gelcoat is very sensitive to environmental conditions. Each batch of gelcoat must be mixed presicely taking into account temperature, hidity, and forecast conditions for 24 hours after application. 
                 Incorrectly mixed gelcoat will result in undercured tacky gelcoat that isn't sandable, will deteriorate quickly, and is difficult to remove. </li>
-
         </ul>
       </div>
     </article>
