--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                     <h2>No Fees</h2>
                     <h2>Just Service</h2>
                     <br>
-                    <div class="bannertext2">
+                    <div>
                         <h4>No Storage Fees.</h4>
                         <h4>No Parts Markups.</h4>
                         <h4>No Overhead Costs.</h4>
