--- a/marineconsultant.html
+++ b/marineconsultant.html
@@ -50,7 +50,7 @@
             </div>
         </nav>
 
-        <div class="bannerimggelcoat "></div>
+        <div class="bannerimgconsulting"></div>
         <header class="pagehead">
           <div class="container toppage">
             <div class="bannerpage">
@@ -66,7 +66,7 @@
               </div>
             </div>
             <div class="topimg">
-              <img src="resources/images/front/Marine Consultant in Maryland.png" alt="Maryland fiberglass repair" class="pictall">
+              <img src="/resources/images/front/Marine Consultant in Maryland.png" alt="Maryland fiberglass repair" class="pictall">
             </div>
           </div>
           <button type="button" id="call">
@@ -88,9 +88,6 @@
                         is a good way end up with an old dirty fiberglass money-pit in your backyard. Instead of pissing off all of the service techs in the area, callme, I'll tell you 
                         what you can realistically expect to accomplish with your restoration budget and how to inquire about service.
                     </p>
-                    <button type="button" class="button2">
-                        <a href="tel:4433653215">Call me!</a>
-                    </button>
                 </article>
                 
             </section>
@@ -104,9 +101,6 @@
                         I'll let you know how much it's going to cost, how long it's going to take, and how many services you'll have to hire to restore the boat. Then, you can make a well-informed decision on whether to procceed investing in the vessel or not. 
                         Better yet, call me before purchasing a boat for a quick, low-cost inspection.
                     </p>
-                    <button type="button" class="button2">
-                        <a href="tel:4433653215">Call me!</a>
-                    </button>
                 </article>
                 <figure class="figurerightshadow">
                     <img src="resources\images\consulting\buying a boat.jpg" alt="Boat inspection in Maryland" class="pic shadow">
@@ -125,9 +119,6 @@
                         because you can't make Youtube videos from Davy Jones's locker. Imagine discovering that the deck needs to be replaced after painting the boat. I've encountered boat owners in that situation many times over the years. 
                         Call me before proceeding with your restoration project for a quick, low-cost deck and hull inspection.
                     </p>
-                    <button type="button" class="button2">
-                        <a href="tel:4433653215">Call me!</a>
-                    </button>
                 </article>
             </section>
 
@@ -140,9 +131,6 @@
                         charge $100/h for their work, so any fiberglass tech capable of making a google business listing can quadruple their income by quitting their job. You'll find the highest quality fiberglass repair techs working out of their home shops. 
                         Schedule an inspection to analyze your repair and point you in the direction of competent repair technicians.
                     </p>
-                    <button type="button" class="button2">
-                        <a href="tel:4433653215">Call me!</a>
-                    </button>
                 </article>
                 <figure class="figurerightshadow">
                         <img src="resources\images\consulting\Boat Repair.jpg" alt="Fiberglass boat repair service in Maryland" class="pic shadow">
@@ -161,9 +149,6 @@
                         and strategies are worth paying for and which ones are just hype. In my experience, there is alot more hype and marketing behind products than results. The best ways to cost-effecitvely maintain a boat 
                         haven't changed much over the past 50 years. Schedule an inspection with me to learn the most cost-effective and proven strategies for maintaining your vessel without turning it into a money pit.
                     </p>
-                    <button type="button" class="button2">
-                        <a href="tel:4433653215">Call me!</a>
-                    </button>
                 </article>
             </section>
 
@@ -176,9 +161,6 @@
                         and that's it: no support, no referrals, just their hand out asking for rent. If you want keep your slips full, you have to provide the services that customers require. You have to help a service business get started, 
                         communicate, and agree upon the details of the services. Schedule a consultation with me to help an entrepreneur start a service business at your location.
                     </p>
-                    <button type="button" class="button2">
-                        <a href="tel:4433653215">Call me!</a>
-                    </button>
                 </article>
                 <figure class="figureright">
                         <img src="resources/images/front/Marine Consultant in Maryland.png" alt="Marina Consultant in Maryland" class="pictall">
