--- a/fiberglassrepair.html
+++ b/fiberglassrepair.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description"content="Maryland Fiberglass Repair">
+  <meta name="description"content="Maryland Fiberglass Repair Service">
   <meta name="keywords" content="fiberglass, repair, construction, fiberglass repair, fiberglass construction, fiberglass boat repair, fiberglass repair shop, boat repair, boat, boat shop, marina, boat yard, boat building, yacht, service, services, annapolis, kent island, st micheals, denton">
   <meta name="author" content="Maryland">
   <meta name="robots" content="index,follow">
@@ -11,8 +11,8 @@
   <meta name="geo.position" content="38.9756; -76.3055">
   <meta name="geo.placename" content="Stevensville">
   <meta name="geo.region" content="US-MD">
-  <meta property="og:title" content="Maryland Fiberglass Repair">
-  <meta property="og:description" content="Maryland Fiberglass Repair">
+  <meta property="og:title" content="Maryland Fiberglass Repair Service">
+  <meta property="og:description" content="Maryland Fiberglass Repair Service">
   <meta property="og:image" content="">
 
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&family=Playfair+Display:wght@400;500;600&display=swap" rel="stylesheet">
@@ -20,14 +20,14 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
   <link href="resources/linked/style.css" rel="stylesheet">
-  <title>Nicks Fiberglass Repair</title>
+  <title>Fiberglass Repair</title>
 </head>
 
 <body>
 
   <nav class="navbar">
     <div class="container nav-container">
-      <a href="index.html"><img src="resources\images\Nicks Boat Work Logo noback.png" alt="maryland boat repair logo" id="logo"></a>
+      <a href="index.html"><img src="resources\images\Nicks Boat Work Logo noback.png" alt="maryland fiberglass boat repair logo" id="logo"></a>
       <div id="nav-link-container">
         <ul>
           <li><a href="boatrepair.html" class="nav-link">Boat Repair</a></li>
