--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description"content="Maryland's Premiere Boat Repair Shop">
+    <meta name="description"content="Maryland Boat Repair Shop">
     <meta name="keywords" content="boat repair, boat shop, maryland, MD, kent island, annapolis, easton, denton, yacht repair, boat service, yacht service, boat yard, marina, service, shop, yard, boat, marine, yacht, baot builder, builder">
     <meta name="author" content="Maryland">
     <meta name="robots" content="index,follow">
