--- a/marineconsultant.html
+++ b/marineconsultant.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description"content="Maryland Boat Inspection">
+    <meta name="description"content="Maryland Boat Inspection Service">
     <meta name="keywords" content="marina consultant, maryland, MD, boat, yacht, sailboat, inspection, service, consultant, prepurchase, presale, pre-sale, pre-purchase, dealer, dealership, boat sales, boat inspections, marine, broker, yacht broker, boat broker, boat business, consulting">
     <meta name="author" content="Maryland">
     <meta name="robots" content="index,follow">
@@ -11,19 +11,19 @@
     <meta name="geo.position" content="38.9756; -76.3055">
     <meta name="geo.placename" content="Stevensville">
     <meta name="geo.region" content="US-MD">
-    <meta property="og:title" content="Maryland Boat Inspections">
-    <meta property="og:description" content="Maryland Boat Inspections">
+    <meta property="og:title" content="Maryland Boat Inspection Service">
+    <meta property="og:description" content="Maryland Boat Inspection Service">
     <meta property="og:image" content="">
 
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&family=Playfair+Display:wght@400;500;600&display=swap" rel="stylesheet">
     <link href="resources/linked/style.css" rel="stylesheet">
-    <title>Maryland Marine Consultant</title>
+    <title>Marine Consultant</title>
 </head>
     <body>
 
         <nav class="navbar">
             <div class="container nav-container">
-                <a href="index.html"><img src="resources/images/Nicks Boat Work Logo noback.png" alt="maryland boat repair logo" id="logo"></a>
+                <a href="index.html"><img src="resources/images/Nicks Boat Work Logo noback.png" alt="maryland boat inspection logo" id="logo"></a>
                 <div id="nav-link-container">
                     <ul>
                         <li><a href="boatrepair.html" class="nav-link">Boat Repair</a></li>
@@ -54,7 +54,7 @@
         <header class="pagehead">
           <div class="container toppage">
             <div class="bannerpage">
-              <h1>Maryland Gelcoat Repair Service in Annapolis and Kent Island</h1>
+              <h1>Maryland Boat Inspection Service in Annapolis and Kent Island</h1>
               <h2>Inside Advice</h2>
               <br>
               <div>
@@ -66,7 +66,7 @@
               </div>
             </div>
             <div class="topimg">
-              <img src="/resources/images/front/Marine Consultant in Maryland.png" alt="Maryland fiberglass repair" class="pictall">
+              <img src="/resources/images/front/Marine Consultant in Maryland.png" alt="Maryland marine consultant" class="pictall">
             </div>
           </div>
           <button type="button" id="call">
