--- a/boatpainting.html
+++ b/boatpainting.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description"content="Maryland's Premiere Boat Painter">
+  <meta name="description"content="Maryland Boat Painter">
   <meta name="keywords" content="boat painter, marine painter, boat painting, marine painting, boat, marine, painter, painting, marina, marina painting, boat yard, boat shop, Awlgrip, Imron, Alexseal, Awlcraft, Maryland, MD, Annapolis, Kent Island, Stevensville, Easton, St. Micheals, denton">
   <meta name="author" content="Maryland">
   <meta name="robots" content="index,follow">
@@ -20,7 +20,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
   <link href="resources/linked/style.css" rel="stylesheet">
-  <title>Nicks Boat Painting</title>
+  <title>Boat Painter</title>
 </head>
 
 <body>
@@ -67,7 +67,7 @@
         </div>
       </div>
       <div class="topimg">
-        <img src="resources/images/front/Maryland Boat Painting.jpg" alt="Maryland boat repair shop" class="pic">
+        <img src="resources/images/front/Maryland Boat Painting.jpg" alt="Maryland boat painter" class="pic">
       </div>
     </div>
     <button type="button" id="call">
