--- a/boatrepair.html
+++ b/boatrepair.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description"content="Maryland's Premiere Boat Repair Shop">
+  <meta name="description"content="Maryland Boat Repair Specialist">
   <meta name="keywords" content="boat repair, boat shop, maryland, MD, kent island, annapolis, easton, st micheals, denton, yacht repair, boat service, yacht service, boat yard, fiberlgass repair, gelcoat repair, fiberglass, gelcoat, marine, boat, yacht, repair, service, shop, boat dealership, boat dealer, paint repair">
   <meta name="author" content="Maryland">
   <meta name="robots" content="index,follow">
@@ -20,7 +20,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
   <link href="resources/linked/style.css" rel="stylesheet">
-  <title>Nicks Boat Repair</title>
+  <title>Boat Repair</title>
 </head>
 
 <body>
