--- a/gelcoatrepair.html
+++ b/gelcoatrepair.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description"content="Maryland Fiberglass Repair">
+  <meta name="description"content="Maryland Gelcoat Repair Service">
   <meta name="keywords" content="gelcoat, repair, boat, yacht, gelcoat repair, maryland, annapolis, kent island, st micheals, easton, denton, near me, MD, marina, shop, boat shop marine">
   <meta name="author" content="Maryland">
   <meta name="robots" content="index,follow">
@@ -11,8 +11,8 @@
   <meta name="geo.position" content="38.9756; -76.3055">
   <meta name="geo.placename" content="Stevensville">
   <meta name="geo.region" content="US-MD">
-  <meta property="og:title" content="Maryland Gelcoat Repair">
-  <meta property="og:description" content="Maryland Gelcoat Repair">
+  <meta property="og:title" content="Maryland Gelcoat Repair Service">
+  <meta property="og:description" content="Maryland Gelcoat Repair Service">
   <meta property="og:image" content="">
 
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&family=Playfair+Display:wght@400;500;600&display=swap" rel="stylesheet">
@@ -21,14 +21,14 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
   <link href="resources/linked/style.css" rel="stylesheet">
 
-  <title>Nicks Gelcoat Repair</title>
+  <title>Gelcoat Repair</title>
 </head>
 
 <body>
 
   <nav class="navbar">
     <div class="container nav-container">
-        <a href="index.html"><img src="resources/images/Nicks Boat Work Logo noback.png" alt="maryland boat repair logo" id="logo"></a>
+        <a href="index.html"><img src="resources/images/Nicks Boat Work Logo noback.png" alt="maryland gelcoat repair logo" id="logo"></a>
         <div id="nav-link-container">
             <ul>
                 <li><a href="boatrepair.html" class="nav-link">Boat Repair</a></li>
@@ -67,7 +67,7 @@
         </div>
       </div>
       <div class="topimg">
-        <img src="resources\images\gelcoat\Gelocat Repair in Maryland.jpg" alt="Maryland fiberglass repair" class="pic shadow">
+        <img src="resources\images\gelcoat\Gelocat Repair in Maryland.jpg" alt="Maryland gelcoat repair service" class="pic shadow">
       </div>
     </div>
     <button type="button" id="call">
