--- a/varnishing.html
+++ b/varnishing.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description"content="Maryland Fiberglass Repair">
+  <meta name="description"content="Maryland Boat Varnisher">
   <meta name="keywords" content="fiberglass, repair, construction, fiberglass repair, fiberglass construction, fiberglass boat repair, fiberglass repair shop, boat repair, boat, boat shop, marina, boat yard, boat building, yacht, service, services, annapolis, kent island, st micheals, denton">
   <meta name="author" content="Maryland">
   <meta name="robots" content="index,follow">
@@ -11,8 +11,8 @@
   <meta name="geo.position" content="38.9756; -76.3055">
   <meta name="geo.placename" content="Stevensville">
   <meta name="geo.region" content="US-MD">
-  <meta property="og:title" content="Maryland Fiberglass Repair">
-  <meta property="og:description" content="Maryland Fiberglass Repair">
+  <meta property="og:title" content="Maryland Boat Varnisher">
+  <meta property="og:description" content="Maryland Boat Varnisher">
   <meta property="og:image" content="">
 
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&family=Playfair+Display:wght@400;500;600&display=swap" rel="stylesheet">
@@ -27,7 +27,7 @@
 
   <nav class="navbar">
     <div class="container nav-container">
-      <a href="index.html"><img src="resources\images\Nicks Boat Work Logo noback.png" alt="maryland boat repair logo" id="logo"></a>
+      <a href="index.html"><img src="resources\images\Nicks Boat Work Logo noback.png" alt="Maryland Boat Varnisher" id="logo"></a>
       <div id="nav-link-container">
         <ul>
           <li><a href="boatrepair.html" class="nav-link">Boat Repair</a></li>
@@ -58,7 +58,7 @@
   <header class="pagehead">
     <div class="container toppage">
       <div class="bannerpage">
-        <h1>Maryland Varnisher</h1>
+        <h1>Maryland Boat Varnisher</h1>
         <h2>Maryland Varnisher</h2>
         <div>
           <br>
@@ -66,7 +66,7 @@
         </div>
       </div>
       <div class="topimg">
-        <img src="resources\images\brightwork\calbrightwork\Boat Varnishing in Maryland 5.jpg" alt="Maryland fiberglass repair" class="pic shadow">
+        <img src="resources\images\brightwork\calbrightwork\Boat Varnishing in Maryland 5.jpg" alt="Maryland Boat Varnisher" class="pic shadow">
       </div>
     </div>
     <button type="button" id="call">
