--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                         top gelcoat maufacturers in the country, Nick can find or produce the custom gelcoat color for your repair need.
                         Check out my fiberglass repair porfolio!</p>
                     <button type="button" class="button2">
-                        <a href="brightwork.html">More About Brightwork</a>
+                        <a href="varnishing.html">More About Brightwork</a>
                     </button>
                 </article>
             </section>
@@ -168,7 +168,7 @@
                         Schedule a consultation today to learn how to perform your DIY repair or restoration with success!
                         More About Consultations</p>
                     <button type="button" class="button2">
-                        <a href="brightwork.html">More About Consultations</a>
+                        <a href="marineconsultant.html">More About Consultations</a>
                     </button>
                 </article>
                 <figure class="figureright">
