--- a/index.html
+++ b/index.html
@@ -15,8 +15,13 @@
     <meta property="og:description" content="Marylands premiere boat repair shop">
     <meta property="og:image" content="">
 
+
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&family=Playfair+Display:wght@400;500;600&display=swap" rel="stylesheet">
     <link href="resources/linked/style.css" rel="stylesheet">
+
     <title>Nicks Boat Work</title>
 </head>
     <body>
@@ -71,7 +76,7 @@
                   <source src="resources/videos/Maryland Boat Repair.mp4" type="video/mp4">
                 </video>
             </div>
-            <button type="button" id="call">
+            <button type="button" id="call" class="callindex">
                 <a href="tel:4433653215">Call me!</a>
             </button>
         </header>
@@ -101,7 +106,7 @@
                         The boat painting process is a science and an art. Consult Maryland's premeire boat painter for help with your boat painting project. 
                         Check out my gallery of boat painting projects!</p>
                     <button type="button" class="button2">
-                        <a href="boatrepair.html">How to Paint a Boat</a>
+                        <a href="boatpainting.html">How to Paint a Boat</a>
                     </button>
                 </article>
                 <figure class="figureright">
@@ -147,13 +152,13 @@
                 </figure>
                 <article class="articleright">
                     <h5>About</h5>
-                    <h3>Brightwork</h3>
+                    <h3>Varnishing</h3>
                     <p>Nicks Boat Work provides gelcoat repair services in Maryland around Annapolis, Easton, and Kent Island.
                         Nicks Boat Work has performed gelcoat repairs on boats, pools, and hottubs. With over 20 years of experience dealing with the 
                         top gelcoat maufacturers in the country, Nick can find or produce the custom gelcoat color for your repair need.
                         Check out my fiberglass repair porfolio!</p>
                     <button type="button" class="button2">
-                        <a href="varnishing.html">More About Brightwork</a>
+                        <a href="varnishing.html">More About Varnishing</a>
                     </button>
                 </article>
             </section>
