--- a/marineconsultant.html
+++ b/marineconsultant.html
@@ -15,6 +15,10 @@
     <meta property="og:description" content="Maryland Boat Inspection Service">
     <meta property="og:image" content="">
 
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    <link href="resources/linked/style.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&family=Playfair+Display:wght@400;500;600&display=swap" rel="stylesheet">
     <link href="resources/linked/style.css" rel="stylesheet">
     <title>Marine Consultant</title>
@@ -69,7 +73,7 @@
               <img src="/resources/images/front/Marine Consultant in Maryland.png" alt="Maryland marine consultant" class="pictall">
             </div>
           </div>
-          <button type="button" id="call">
+          <button type="button" id="call" class="callconsulting">
               <a href="tel:4433653215">Call me!</a>
           </button>
         </header>
