--- a/fiberglassrepair.html
+++ b/fiberglassrepair.html
@@ -43,7 +43,7 @@
   <nav id="nav2">
     <div class="dropdown" onclick="toggleDropdown()">
       <button class="dropbtn">Menu</button>
-      <div class="dropdown-content dropdown-content2">
+      <div class="dropdown-content">
         <a href="boatrepair.html">Repairs</a>
         <a href="boatpainting.html">Boat Painting</a>
         <a href="fiberglassrepair.html">Fiberglass</a>
