--- a/marineconsultant.html
+++ b/marineconsultant.html
@@ -186,7 +186,7 @@
         
         </main>
 
-        <footer class="container">
+        <footer class="footer container">
             <div class="contact">
                 <br>
                 <img src="resources/images/Nicks Boat Work Logo.png" alt="marine consultant">
