--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&family=Playfair+Display:wght@400;500;600&display=swap" rel="stylesheet">
     <link href="resources/linked/style.css" rel="stylesheet">
 
+    <link rel="icon" type="image/x-icon" href="/resources/images/boat service.png">
     <title>Nicks Boat Work</title>
 </head>
     <body>
