--- a/boatpainting.html
+++ b/boatpainting.html
@@ -20,6 +20,8 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
   <link href="resources/linked/style.css" rel="stylesheet">
+
+  <link rel="icon" type="image/x-icon" href="/resources/images/boat service.png">
   <title>Boat Painter</title>
 </head>
 
