--- a/gelcoatrepair.html
+++ b/gelcoatrepair.html
@@ -21,6 +21,7 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
   <link href="resources/linked/style.css" rel="stylesheet">
 
+  <link rel="icon" type="image/x-icon" href="/resources/images/boat service.png">
   <title>Gelcoat Repair</title>
 </head>
 
