--- a/marineconsultant.html
+++ b/marineconsultant.html
@@ -21,6 +21,8 @@
     <link href="resources/linked/style.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&family=Playfair+Display:wght@400;500;600&display=swap" rel="stylesheet">
     <link href="resources/linked/style.css" rel="stylesheet">
+
+    <link rel="icon" type="image/x-icon" href="/resources/images/boat service.png">
     <title>Marine Consultant</title>
 </head>
     <body>
