--- a/marineconsultant.html
+++ b/marineconsultant.html
@@ -174,7 +174,7 @@
             </section>
 
             <section class="imgbox">
-                <h4>Marina Groups I Advise</h4>
+                <h4>Marina Groups</h4>
                 <figure>
                   <div class="container logobox">
                     <div class="container imgblock"><a href="https://trident-marine.com/" target="_blank"><img src="resources/images/consulting/consultinglogos/marina consultant.webp" alt="Marina Conslutant in Maryland"></a></div>
