--- a/marineconsultant.html
+++ b/marineconsultant.html
@@ -24,6 +24,17 @@
 
     <link rel="icon" type="image/x-icon" href="/resources/images/boat service.png">
     <title>Marine Consultant</title>
+
+        <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-PPQEVEQN61"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-PPQEVEQN61');
+    </script>
+
 </head>
     <body>
 
